Tidy up java source and test code for JDK upgrade to LTS 25